# aws-finops-dashboard

./: .dockerignore  .gitignore  LICENSE  MANIFEST.in  README.md  aws_finops_commands.txt  aws_finops_web.py  backend.Dockerfile  config.json  config.toml  config.yaml  config.yml  dashboard.py  debug_pdf.py  debug_ri_pdf.py  docker-compose.yml  docker-next.config.js  frontend.Dockerfile  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  start.bat  start.sh  test_resource_analyzer.py
.github/workflows/: testpypi-publish.yml
aws_finops_dashboard/: __init__.py  anomaly_detection.py  api.py  aws_client.py  cli.py  cli.py.backup  cost_processor.py  dashboard_runner.py  dashboard_runner.py.bak  dashboard_runner.py.fixed  helpers.py  main.py  optimization_recommendations.py  profile_processor.py  resource_analyzer.py  resource_analyzer_export.py  ri_optimizer.py  types.py  visualisations.py  web_ui.py
frontend/aws-finops-ui/: README.md  next.config.js  package-lock.json  package.json
frontend/aws-finops-ui/public/: xterm.css
frontend/aws-finops-ui/src/app/: globals.css  layout.tsx  page.tsx  providers.d.ts  providers.tsx
frontend/aws-finops-ui/src/app/api/download/: route.ts
frontend/aws-finops-ui/src/app/api/run_aws_cli/: route.ts
frontend/aws-finops-ui/src/app/api/task_status/: route.ts
frontend/aws-finops-ui/src/app/previous-results/: page.tsx
frontend/aws-finops-ui/src/components/: AddCredentialsModal.tsx  CurrencySelector.tsx  EmptyState.tsx  ErrorFeedback.tsx  Header.tsx  LoadingSpinner.tsx  ProfileSelector.tsx  RegionSelector.css  RegionSelector.tsx  ResourceAnalyzerOptions.tsx  ServerLogs.tsx  TagAnalyzerOptions.tsx  TagSelector.tsx  TaskOutput.tsx  TaskSelector.tsx  TerminalOutput.tsx
