[project]
name = "aws-finops-dashboard"
version = "2.1.1"
description = "A terminal-based AWS cost and resource dashboard."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Ravi Kiran Vallamkonda"}]
dependencies = [
    "boto3",
    "rich"
]
keywords = ["aws", "finops", "dashboard", "cli", "cloud", "cost"]

[project.urls]
"Homepage" = "https://github.com/ravikiranvm/aws-finops-dashboard"
"Source" = "https://github.com/ravikiranvm/aws-finops-dashboard"

[project.scripts]
aws-finops = "aws_finops_dashboard.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
