[project]
name = "aws-finops-dashboard"
version = "2.1.1"
description = "A terminal-based AWS cost and resource dashboard."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Ravi Kiran Vallamkonda"}]
dependencies = [
    "boto3>=1.37.28",
    "rich>=14.0.0",
]
keywords = ["aws", "finops", "dashboard", "cli", "cloud", "cost"]

[project.urls]
"Homepage" = "https://github.com/ravikiranvm/aws-finops-dashboard"
"Source" = "https://github.com/ravikiranvm/aws-finops-dashboard"

[project.scripts]
aws-finops = "aws_finops_dashboard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
